# projeto_database

./: README.md  alembic.ini  config.py  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
core/: .secrets.toml  main.py
core/models/: db.py  meu_banco.duckdb
core/scripts/: populate_db.py
core/telas/: consultas.py  get_medicamento.py  medicamento.py  pacientes.py
